k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pam-approver
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app: pam-approver
